--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,10 @@
     "description": "This is test pwa app.",
     "dir": "ltr",
     "display": "standalone",
-    "name": "supabase-test",
+    "name": "pwa-test",
     "orientation": "any",
     "scope": "/",
-    "short_name": "supabase-test",
+    "short_name": "pwa-test",
     "start_url": "/",
     "theme_color": "#000000",
     "categories": [],
